--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Document</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    p {
+      line-height: 1.5;
+    }
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+    li {
+      margin: 5px 0;
+    } 
+  </style>
 
 </head>
 
