--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     li {
       margin: 5px 0;
     } 
+
+    li:nth-child(odd) {
+      background-color: #e0e0e0;
+    }
+
+    li:nth-child(even) {
+      background-color: #d0d0d0;
+    }
+    
   </style>
 
 </head>
@@ -40,6 +49,10 @@
     <li>Item 3</li>
     <li>Item 4</li>
     <li>Item 5</li>
+    <li>Item 6</li>
+    <li>Item 7</li>
+    <li>Item 8</li>
+
     
 
   <ul>
