--- a/index.html
+++ b/index.html
@@ -1,51 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Web Moderna Responsive</title>
+    <style>
+        /* Reset some default styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-  <title>Document</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      color: #333;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    p {
-      line-height: 1.5;
-    }
-    ul {
-      list-style-type: square;
-      padding-left: 20px;
-    }
-    li {
-      margin: 5px 0;
-    } 
-  </style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
 
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 1rem 2rem;
+        }
+
+        header h1 {
+            font-size: 1.8rem;
+        }
+
+        nav {
+            margin-top: 0.5rem;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        nav ul li {
+            margin-right: 1.5rem;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #ffc107;
+        }
+
+        main {
+            flex: 1;
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        main h2 {
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+            color: #007bff;
+        }
+
+        main p {
+            margin-bottom: 1rem;
+            font-size: 1rem;
+        }
+
+        footer {
+            background-color: #222;
+            color: #ccc;
+            text-align: center;
+            padding: 1rem 2rem;
+            font-size: 0.9rem;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            nav ul {
+                flex-direction: column;
+            }
+
+            nav ul li {
+                margin-bottom: 0.75rem;
+            }
+
+            main {
+                padding: 1rem;
+                margin: 1rem;
+            }
+        }
+    </style>
 </head>
-
 <body>
-  <h1>Hello, World!</h1>
-  <p>This is a simple HTML document.</p>
-  <p>Welcome to my website!</p>
-  <p>Here is a list of items:</p>
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-    <li>Item 4</li>
-    <li>Item 5</li>
-    
-
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li> 
-
+    <header>
+        <h1>Mi Web Moderna</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Bienvenido a mi sitio web</h2>
+        <p>Este es un diseño moderno y responsive que se adapta a cualquier tamaño de pantalla.</p>
+        <p>Utiliza HTML5 y CSS3 para ofrecer una experiencia de usuario óptima en dispositivos móviles y de escritorio.</p>
+    </main>
+    <footer>
+        &copy; 2024 Mi Web Moderna. Todos los derechos reservados.
+    </footer>
 </body>
 </html>
